# ZERO

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
core/drift/: drift_collector.py  drift_predictor.py  thermal_model.py
core/fingerprint/: __init__.py  temporal_fingerprint.py
core/hal/: __init__.py  sensors.py  timers.py
core/simulation/: clock_drift_model.py  node_simulation.py
core/synchronization/: beacon_synchronization.py  synchronization.py
core/validation/: validate_tmb.py
core/visualization/: plot_drift.py
logs/: drift_20250719_185318_summary.json  drift_20250723_162904_summary.json  drift_20250723_163915_summary.json  drift_20250724_045824_summary.json  drift_20250724_050852_summary.json  drift_20250724_052738_summary.json
scripts/: config.ini  hw_validation.py  oscillator_characterization.py  setup.sh  stress_tests.py  test_compensation.py  test_tmb.sh  validate_compensation.py
